# tanmatra

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/decisions/: 001-flat-module-layout.md  002-real-data-only.md  003-no-std-first.md  004-feature-gated-optics.md  005-semi-empirical-plus-corrections.md
docs/development/: roadmap.md  threat-model.md
docs/guides/: testing.md
examples/: basic.rs  nuclear.rs  relativity.rs  spectral.rs
scripts/: bench-history.sh
src/: atomic.rs  bridge.rs  constants.rs  decay.rs  error.rs  lib.rs  nucleus.rs  optics.rs  particle.rs  reaction.rs  relativity.rs  scattering.rs  timekeeping.rs
src/integration/: soorat.rs
tests/: integration.rs
