[package]
name = "tanmatra"
version = "1.2.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "tanmatra — Atomic and subatomic physics: Standard Model, nuclear structure, radioactive decay, spectral lines"
homepage = "https://github.com/MacCracken/tanmatra"
repository = "https://github.com/MacCracken/tanmatra"
readme = "README.md"
documentation = "https://docs.rs/tanmatra"
keywords = ["physics", "nuclear", "particle", "atomic", "decay"]
categories = ["science", "mathematics"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
libm = "0.2"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }
prakash = { version = "1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[features]
default = ["std"]
soorat-compat = ["std"]
full = ["std", "logging", "optics", "soorat-compat"]
optics = ["std", "dep:prakash"]
std = ["serde/std", "thiserror/std"]
logging = ["dep:tracing"]

[[bench]]
name = "benchmarks"
harness = false
